--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             <li> <a href="module-5/Perkins_EX4.html"> Assignment 5.2</a> </li>
             <li> <a href="module-7/Perkins_EX5.html"> Assignment 7.2</a> </li>
             <li> <a href="module-9/Perkins_EX6.html"> Assignment 9.2</a> </li>
+            <li> <a href="module-11/assignment-11.2.html"> Assignment 11.2</a> </li>
         </ul>
         <h3> Projects </h3>
         <ul>
-            <li> <a href="#"> bioSite Project Home Page </a> </li>
+            <li> <a href="https://aperkins7446.github.io/bioSite/"> bioSite Project Home Page </a> </li>
             <li> <a href="#"> Final Exam </a> </li>
         </ul>
         <h4> Important Links </h4>
