--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3> Projects </h3>
         <ul>
             <li> <a href="https://aperkins7446.github.io/bioSite/"> bioSite Project Home Page </a> </li>
-            <li> <a href="#"> Final Exam </a> </li>
+            <li> <a href="final/APerkinsFinal.html"> Final Exam </a> </li>
         </ul>
         <h4> Important Links </h4>
         <ul> 
